--- a/stylee.css
+++ b/stylee.css
@@ -54,3 +54,19 @@
             height: auto;
             margin-top: 20px;
         }
+
+         /* Footer Styles */
+        footer {
+            background-color: #343a40;
+            color: #fff;
+            padding: 20px 0;
+            text-align: center;
+        }
+        footer a {
+            color: #f8f9fa;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
